# SunwellCore

./: CMakeLists.txt  README.txt  SETUP.txt  Wyjaśnienie.txt  revision.h.in.cmake  revision_data.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
dep/: CMakeLists.txt  PackageList.txt
dep/acelite/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt  DetourNavMeshBuilder.cpp  DetourNavMeshBuilder.h
dep/recastnavigation/Recast/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/new/: apply_after_tests.sql
sql/new/auth/: 0001_account_active.sql  0002_account_premium.sql  0002_uptime.sql  0005_autoannounce.sql
sql/new/characters/: 0001_achievement_points_character_stats.sql  0002_unification.sql
sql/new/world/: 0002_added_in_build.sql  0003_command_premium.sql  0005_tc_creature_spawn.sql  0007_emerald_dream.sql  0008_quest_be_startzone.sql  0009_quest_template_split.sql  0011_creature_damage.sql  0013_unification.sql  0015_playercreateinfo_skills.sql  0019_game_event_2016.sql  0022_disables_mmap.sql  0024_quest_fix_silvermoon.sql  0025_bftg_horde_chain.sql  0026_misc_fixes.sql  0027_commands.sql  0028_smartai.sql  0029_questitems.sql  0030_skill_fishing.sql  0031_bugfixes.sql  0033_bugfixes.sql  0034_bugfixes.sql  0035_bugfixes.sql  0036_bugfixes.sql  0037_bugfixes.sql
sql/new/world/patch_change/: patch_30x.sql  patch_31x.sql  patch_320.sql  patch_330.sql
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Common.h
src/common/Collision/Management/: MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapManager2.cpp  VMapManager2.h
src/common/Collision/Maps/: MapDefines.h  MapTree.cpp  TileAssembler.cpp  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.cpp  GameObjectModel.h
src/common/Logging/: Log.cpp
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: Main.cpp  authserver.rc
src/server/authserver/Server/: AuthSocket.cpp
src/server/collision/Management/: MMapFactory.h  MMapManager.h  VMapManager2.h
src/server/collision/Maps/: MapTree.h
src/server/collision/Models/: GameObjectModel.cpp
src/server/database/: CMakeLists.txt
src/server/database/PrecompiledHeaders/: databasePCH.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/ArenaSpectator/: ArenaSpectator.h
src/server/game/AuctionHouse/: AuctionHouseMgr.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h
src/server/game/Battlegrounds/: ArenaTeamMgr.h  Battleground.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h
src/server/game/Calendar/: CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h
src/server/game/Conditions/: ConditionMgr.cpp  DisableMgr.cpp  DisableMgr.h
src/server/game/DataStores/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/server/game/DungeonFinding/: LFG.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.h
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h
src/server/game/Grids/: GridDefines.h
src/server/game/Groups/: GroupMgr.cpp
src/server/game/Guilds/: Guild.h  GuildMgr.h
src/server/scripts/: ScriptLoader.cpp  ScriptLoader.h
src/server/shared/: CMakeLists.txt  Common.h
src/server/worldserver/: CMakeLists.txt  Master.cpp  worldserver.conf.dist  worldserver.rc
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.h
src/tools/mmaps_generator/: CMakeLists.txt  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h
src/tools/vmap4_assembler/: CMakeLists.txt
src/tools/vmap4_extractor/: CMakeLists.txt  model.cpp
(+358 files in other folders)
